--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -32,6 +32,7 @@
 }
 
 .gallerySection {
+    padding: 1rem;
     h3 {
         font-family: "Nothing You Could Do", cursive;
         text-align: center;
@@ -67,7 +68,7 @@
         }
 
         h5 {
-            font-size: 1.7rem;
+            font-size: 1.4rem;
         }
     }
 }
