--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -42,11 +42,15 @@
 }
 
 .aboutSection {
+    padding: 1rem;
     h3 {
         font-family: "Nothing You Could Do", cursive;
         text-align: center;
         margin: 6rem 0;
         font-size: 2.5rem;
+    }
+    .ourImage  {
+        filter: grayscale(0.6) brightness(0.7);
     }
 }
 
