--- a/layouts/layouts.module.scss
+++ b/layouts/layouts.module.scss
@@ -52,7 +52,7 @@
         margin-top: 2.5rem;
         width: 16rem;
         transition: all 0.3s ease-in-out;
-        transform: scale(0.85);
+        transform: scale(1.075);
 
         &.logoScrolled {
             transform: scale(0.7);
@@ -99,7 +99,7 @@
         top: 40vh;
         display: flex;
         flex-direction: column;
-        z-index: 2;
+        z-index: 1999;
 
         .socialButton {
             font-size: 0.8rem;
@@ -130,21 +130,21 @@
             }
             &.facebookScrolled {
                 border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #3b5998;
+                background-color: #3b589881;
                 transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #00000069;
+                box-shadow: 2px 2px 6px -1px #00000027;
             }
             &.twitterScrolled {
                 border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #00aced;
+                background-color: #00aeed81;
                 transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #00000069;
+                box-shadow: 2px 2px 6px -1px #0000002f;
             }
             &.instagramScrolled {
                 border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #e1306c;
+                background-color: #e1306b81;
                 transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #00000069;
+                box-shadow: 2px 2px 6px -1px #00000033;
             }
         }
     }
