--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -43,27 +43,76 @@
 
 .aboutSection {
     padding: 1rem;
+
     h3 {
         font-family: "Nothing You Could Do", cursive;
         text-align: center;
         margin: 6rem 0;
         font-size: 2.5rem;
     }
-    .ourImage  {
-        filter: grayscale(0.6) brightness(0.7);
+
+    .aboutUs {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        height: 160rem;
+
+        .ourImageContainer {
+            margin: 2rem;
+            box-shadow: 1px 4px 8px -2px #00000056;
+
+            .ourImage {
+                height: 76rem;
+                background-size: cover;
+                background-position: center;
+            }
+        }
+        .ourMessage {
+            padding: 2rem;
+            box-shadow: 1px 4px 8px -2px #00000056;
+            margin: 2rem;
+
+            h4 {
+                font-size: 1.5rem;
+                font-family: "Nothing You Could Do", cursive;
+                color: #7e0101;
+                border-bottom: 1px solid #0000000a;
+                margin-bottom: 2rem;
+                padding-bottom: 1rem;
+                letter-spacing: 5.5px;
+            }
+
+            p {
+                font-family: Helvetica, Arial, sans-serif;
+                font-weight: 100;
+                line-height: 1.8;
+                margin-bottom: 2rem;
+                color: #1616168e;
+                font-size: 1.3rem;
+                text-align: justify;
+            }
+        }
     }
 }
 
 .contactSection {
+    padding: 1rem;
+
     h3 {
         font-family: "Nothing You Could Do", cursive;
         text-align: center;
         margin: 6rem 0;
         font-size: 2.5rem;
     }
+    .contactContainer {
+        height: 60rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .headerContainer {
         h4 {
             right: 4rem;
@@ -73,6 +122,48 @@
 
         h5 {
             font-size: 1.4rem;
+        }
+    }
+    .gallerySection {
+        margin: 0 auto;
+        min-height: 100rem;
+    }
+
+    .aboutSection {
+        margin: 0 auto;
+
+        .aboutUs {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+            gap: 1rem;
+            height: 70rem;
+
+            .ourImageContainer {
+                position: relative;
+                height: 70rem;
+
+                .ourImage {
+                    height: 70rem;
+                }
+            }
+        }
+    }
+    .contactSection {
+        padding: 3rem;
+
+        h3 {
+            font-family: "Nothing You Could Do", cursive;
+            text-align: center;
+            margin: 6rem 0;
+            font-size: 2.5rem;
+        }
+        .contactContainer {
+            height: 60rem;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+            gap: 2rem;
         }
     }
 }
