--- a/layouts/layouts.module.scss
+++ b/layouts/layouts.module.scss
@@ -8,6 +8,11 @@
 
 .main {
     flex: 1;
+    background-image: url("/images/background/web_background_white.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .nav {
@@ -15,12 +20,12 @@
     background: rgb(0, 0, 0);
     background: linear-gradient(
         180deg,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.6116421568627452) 48%,
+        rgba(0, 0, 0, 0.795) 0%,
+        rgba(0, 0, 0, 0.39) 48%,
         rgba(0, 0, 0, 0.0018382352941176405) 100%
     );
     display: flex;
-    height: 10rem;
+    height: 8rem;
     justify-content: space-between;
     padding: 2rem 3rem;
     position: fixed;
@@ -33,19 +38,13 @@
         background: rgb(255, 255, 255);
         background-color: #fafafa;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-        opacity: 0.8;
+        opacity: 0.9;
         height: 5rem;
         .menu {
             .links {
                 color: #000;
             }
         }
-
-        // .active {
-        // &::after {
-        //     background-color: #f18b55 !important;
-        // }
-        // }
     }
 
     .logo {
@@ -135,23 +134,10 @@
                     background-color: #e1306c;
                 }
             }
-            &.facebookScrolled {
-                border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #3b589881;
-                transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #00000027;
-            }
-            &.twitterScrolled {
-                border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #00aeed81;
-                transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #0000002f;
-            }
+            &.facebookScrolled,
+            &.twitterScrolled,
             &.instagramScrolled {
-                border: 1px solid rgba(255, 255, 255, 0);
-                background-color: #e1306b81;
-                transform: scale(1.1);
-                box-shadow: 2px 2px 6px -1px #00000033;
+                transform: translateX(-10rem);
             }
         }
     }
@@ -162,6 +148,7 @@
     }
 
     .nav {
+        height: 12rem;
         .logo {
             margin-top: 2.5rem;
             width: 24rem;
