--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,7 +13,7 @@
         position: absolute;
         bottom: 7rem;
         right: 3rem;
-        font-family: "Nothing You Could Do", cursive;
+        font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
         font-weight: 400;
         font-size: 1.6rem;
         color: white;
@@ -24,7 +24,7 @@
         position: absolute;
         right: 3rem;
         bottom: 4rem;
-        font-family: "Nothing You Could Do", cursive;
+        font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
         font-weight: 400;
         font-size: 1.2rem;
         color: white;
@@ -35,7 +35,7 @@
     padding: 1rem;
 
     h3 {
-        font-family: "Nothing You Could Do", cursive;
+        font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
         text-align: center;
         margin: 3rem 0;
         font-size: 2.5rem;
@@ -46,7 +46,7 @@
     padding: 1rem;
 
     h3 {
-        font-family: "Nothing You Could Do", cursive;
+        font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
         text-align: center;
         margin: 3rem 0;
         font-size: 2.5rem;
@@ -54,20 +54,30 @@
 
     .aboutUs {
         display: grid;
-        // grid-template-columns: 1fr;
-        // grid-template-rows: 1fr 1fr;
-        // max-height: 140rem;
 
         .ourImageContainer {
             margin: 2rem;
-            // box-shadow: 1px 4px 8px -2px #00000056;
+            text-align: center;
 
-            .ourImage {
+            img {
                 height: 46rem;
                 background-size: cover;
                 background-position: center;
+                box-shadow: 1px 4px 8px -2px #00000056;
             }
         }
+
+        .ourImagePlaceholder {
+            width: 100%;
+            overflow: hidden;
+            height: 46rem;
+
+            svg {
+                padding: 2rem;
+                height: 100%;
+            }
+        }
+
         .ourMessage {
             padding: 2rem;
             box-shadow: 1px 4px 8px -2px #00000056;
@@ -75,7 +85,7 @@
 
             h4 {
                 font-size: 1.5rem;
-                font-family: "Nothing You Could Do", cursive;
+                font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
                 color: #7e0101;
                 border-bottom: 1px solid #0000000a;
                 margin-bottom: 2rem;
@@ -84,7 +94,7 @@
             }
 
             p {
-                font-family: Helvetica, Arial, sans-serif;
+                font-family: Cuprum, sans-serif;
                 font-weight: 100;
                 line-height: 1.8;
                 margin-bottom: 2rem;
@@ -100,7 +110,7 @@
     padding: 1rem;
 
     h3 {
-        font-family: "Nothing You Could Do", cursive;
+        font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
         text-align: center;
         margin: 3rem 0;
         font-size: 2.5rem;
@@ -136,8 +146,6 @@
 
     .aboutSection {
         margin: 0 auto;
-        background-color: #ececec2e;
-        box-shadow: 2px 2px 10px -2px #0000001c;
 
         h3 {
             margin: 6rem 0;
@@ -156,12 +164,30 @@
                 position: relative;
                 height: 70rem;
 
-                .ourImage {
+                img {
                     height: 70rem;
+                    width: 100%;
                 }
             }
+
+            .ourImagePlaceholder {
+                width: 100%;
+                overflow: hidden;
+
+                svg {
+                    padding: 2rem;
+                }
+            }
+
             .ourMessage {
                 background-color: #fff;
+
+                h4 {
+                    font-size: 1.8rem;
+                }
+                p {
+                    font-size: 1.5rem;
+                }
             }
         }
     }
@@ -171,7 +197,7 @@
         padding: 3rem;
 
         h3 {
-            font-family: "Nothing You Could Do", cursive;
+            font-family: "Nothing You Could Do", cursive, sans-serif, Arial;
             text-align: center;
             margin: 6rem 0;
             font-size: 2.5rem;
