--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "Cuprum";
+    src: url("../assets/fonts/Cuprum.ttf");
+    font-weight: 400;
+    font-style: normal;
+}
+
 html {
     height: 100%;
     box-sizing: border-box;
