updater marker leaflet to be always active

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -124,6 +124,10 @@
         grid-gap: 2rem;
         margin-bottom: 5rem;
 
+        .contactMap {
+            box-shadow: 1px 4px 8px -2px #00000056;
+        }
+
         .contactInfoContainer {
             background-color: #fff;
             padding: 2rem;
