--- a/layouts/layouts.module.scss
+++ b/layouts/layouts.module.scss
@@ -1,20 +1,3 @@
-.globalContainer {
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
-
-.main {
-    flex: 1;
-    background-image: url("/images/background/web_background_white.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 .nav {
     align-items: center;
     background: rgb(0, 0, 0);
@@ -133,6 +116,52 @@
     }
 }
 
+.globalContainer {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+
+    .main {
+        flex: 1;
+        background-image: url("/images/background/web_background_white.jpg");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+
+.goTopButton {
+    align-items: center;
+    background-color: rgba(63, 63, 63, 0.548);
+    bottom: 1.5rem;
+    border-radius: 50%;
+    color: rgba(255, 255, 255, 0.767);
+    cursor: pointer;
+    display: flex;
+    height: 3rem;
+    justify-content: center;
+    font-size: 1.7rem;
+    position: fixed;
+    right: 1.5rem;
+    transition: all 0.3s ease-in-out;
+    z-index: 1999;
+    width: 3.1rem;
+    opacity: 0;
+    transform: translate(0, -2rem);
+
+    &:hover {
+        transform: scale(1.1);
+    }
+
+    &.goTopScrolled {
+        opacity: 1;
+        transform: translate(0, 0rem);
+    }
+}
+
 @keyframes growBar {
     0% {
         transform: scale(0);
@@ -150,11 +179,6 @@
             width: 1.5rem;
             height: 1.5rem;
         }
-    }
-
-    .logo {
-        margin-top: 2.5rem;
-        width: 24rem;
     }
 
     .nav {
@@ -201,6 +225,18 @@
         }
         .responsiveMenu {
             display: none;
+        }
+    }
+
+    .goTopButton {
+        bottom: 2rem;
+        height: 3.4rem;
+        font-size: 2rem;
+        right: 2rem;
+        width: 3.5rem;
+
+        &:hover {
+            transform: scale(1.1);
         }
     }
 }
