--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -37,37 +37,21 @@
             .socialMedia {
                 margin-top: 2rem;
                 .socialButton {
-                    font-size: 0.8rem;
-                    color: #fff;
-                    border: 1px solid rgba(255, 255, 255, 0.281);
-                    border-radius: 50%;
+                    font-size: 1rem;
+                    color: rgb(255, 255, 255);
+                    border: 1px solid rgba(255, 255, 255, 0);
+                    border-radius: 20%;
                     padding: 0.9rem;
                     cursor: pointer;
-                    transition: all 0.5s ease-in-out;
-                    width: 1.5rem;
-                    height: 1.5rem;
+                    transition: all 0.3s ease-in-out;
+                    width: 2.5rem;
+                    height: 2.5rem;
                     margin-bottom: 0.85rem;
                     margin-right: 1.5rem;
 
                     &:hover {
-                        border: 1px solid rgba(255, 255, 255, 0);
-                        transform: scale(1.1);
-                        box-shadow: 2px 2px 6px -1px #00000069;
-
-                        &.facebook {
-                            background-color: #3b5998;
-                        }
-                        &.twitter {
-                            background-color: #00aced;
-                        }
-                        &.instagram {
-                            background-color: #e1306c;
-                        }
-                    }
-                    &.facebookScrolled,
-                    &.twitterScrolled,
-                    &.instagramScrolled {
-                        transform: translateX(-10rem);
+                        transform: scale(1.2);
+                        color: rgb(255, 255, 255);
                     }
                 }
             }
