--- a/components/responsiveMenu/RespMenu.module.scss
+++ b/components/responsiveMenu/RespMenu.module.scss
@@ -111,6 +111,7 @@
             position: relative;
             text-transform: uppercase;
             margin-left: 3rem;
+            margin-bottom: 1.5rem;
             height: 4rem;
             opacity: 0;
             transition: all 0.5s ease-in-out;
