--- a/layouts/layouts.module.scss
+++ b/layouts/layouts.module.scss
@@ -142,6 +142,10 @@
         opacity: 1;
         transform: translate(0, 0rem);
     }
+    &.disabled {
+        opacity: 0;
+        transform: translate(0, -2rem);
+    }
 }
 
 @keyframes growBar {
