--- a/layouts/layouts.module.scss
+++ b/layouts/layouts.module.scss
@@ -63,8 +63,8 @@
 
     .socialButton {
         font-size: 0.5rem;
-        color: rgba(255, 255, 255, 0.719);
-        border: 1px solid rgba(255, 255, 255, 0.137);
+        color: rgb(255, 255, 255);
+        border: 1px solid rgba(255, 255, 255, 0.397);
         border-radius: 20%;
         padding: 0.7rem;
         cursor: pointer;
