--- a/pages/login/Login.module.scss
+++ b/pages/login/Login.module.scss
@@ -1,6 +1,6 @@
 .loginMainContainer {
     background: rgb(31, 36, 150);
-    background: radial-gradient(circle, rgba(31, 36, 150, 1) 22%, rgba(0, 7, 50, 1) 100%);
+    background: radial-gradient(circle, #ffffff 22%, #6b6c70 100%);
     height: 100vh;
     font-family: "Alegreya Sans", "Times New Roman", Times, serif;
 
@@ -72,15 +72,21 @@
 
                 input {
                     background-color: rgb(255, 255, 255);
+                    border: 1px solid rgba(255, 255, 255, 0);
                     padding: 1.5rem;
                     padding-left: 4rem;
-                    font-size: 1.4rem;
+                    font-size: 1.1rem;
                     width: 100%;
                     letter-spacing: 1px;
 
                     &::placeholder {
                         color: rgb(182, 182, 182);
                         letter-spacing: 2px;
+                        font-size: 1.1rem;
+                    }
+
+                    .input-error {
+                        border: 1px solid rgba(243, 6, 6, 0.637) !important;
                     }
                 }
             }
@@ -232,6 +238,16 @@
                 margin-top: 4rem;
                 .buttonGroup {
                     margin-top: 6rem;
+                }
+
+                .formGroup {
+                    input {
+                        font-size: 1.4rem;
+
+                        &::placeholder {
+                            font-size: 1.2rem;
+                        }
+                    }
                 }
             }
 
