--- a/pages/login/Login.module.scss
+++ b/pages/login/Login.module.scss
@@ -181,27 +181,18 @@
                     margin-top: 0.3rem;
                 }
             }
+        }
 
-            .buttonGroup {
-                display: flex;
-                justify-content: flex-end;
-                margin-top: 4rem;
+        .buttonGroup {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 4rem;
 
-                button {
-                    padding: 1.5rem;
-                    font-size: 1.4rem;
-                    background-color: #42c1fc;
-                    color: #fff;
-                    border: none;
-                    cursor: pointer;
-                    transition: all 0.3s ease-in-out;
-                    width: 100%;
-                    text-transform: uppercase;
-                    letter-spacing: 1.2px;
-
-                    &:hover {
-                        background-color: #2b8fbd;
-                    }
+            button {
+                font-size: 1.2rem;
+                width: 100%;
+                .aws-btn__content {
+                    background: red !important;
                 }
             }
         }
@@ -219,7 +210,7 @@
 @media (min-width: 468px) {
     .loginMainContainer {
         .formContainer {
-            padding: 3rem;
+            padding: 2.5rem;
             width: 40rem;
             h1 {
                 font-size: 1.7rem;
@@ -231,8 +222,8 @@
 @media (min-width: 768px) {
     .loginMainContainer {
         .formContainer {
-            padding: 5rem;
-            width: 45rem;
+            padding: 3rem;
+            width: 43rem;
 
             form {
                 margin-top: 4rem;
@@ -250,10 +241,29 @@
                     }
                 }
             }
+            .buttonGroup {
+                button {
+                    width: 15rem;
+                    font-size: 1.6rem;
+                    letter-spacing: 2px;
+                    .aws-btn__content {
+                        background: red !important;
+                    }
+                }
+            }
 
             h1 {
                 font-size: 2rem;
             }
+        }
+    }
+}
+
+@media (min-width: 992px) {
+    .loginMainContainer {
+        .formContainer {
+            padding: 5rem;
+            width: 47rem;
         }
     }
 }
